# neurolight-prototype

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE-MIT  README.md  demo-2_neuron_locations.csv  demo-2_neuron_trajectories.npy  pyproject.toml  requirements.txt  run.bat  test27.nexp
neurolight/: .gitignore  README.md  Test-image-stack.nexp
neurolight/src/core/: image_processor.py
neurolight/src/ui/: analysis_panel.py  image_viewer.py  startup_dialog.py
neurolight/src/utils/: file_handler.py
src/: main.py
src/core/: data_analyzer.py  experiment_manager.py  gif_generator.py  image_processor.py  roi.py
src/ui/: alignment_dialog.py  alignment_progress_dialog.py  analysis_panel.py  error_popup.py  image_viewer.py  loading_dialog.py  main_window.py  neuron_detection_widget.py  neuron_trajectory_plot.py  roi_intensity_plot.py  startup_dialog.py
src/utils/: file_handler.py
tests/: test_main_window_close_exit.py
